# tracing

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  factorial.cpp  fibonacci.cpp  tracing.hpp
.github/workflows/: cmake-multi-platform.yml
cmake/: StrictWarnings.cmake
examples/: CMakeLists.txt  fibonacci.cpp
include/tracing/: tracing.hpp
